--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "tidygapminder"]
+	path = tidygapminder
+	url = https://github.com/ebedthan/tidygapminder
+	shallow = true
+	registered = true
